outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-8016016610565355713_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring, using a dynamic exploration factor that prioritizes high-impact nodes early while gradually favoring global optimization through a centrality-adjusted distance metric and a progress-dependent weight adjustment system.}
                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring, using a dynamic exploration factor that prioritizes high-impact nodes early while gradually favoring global optimization through a centrality-adjusted distance metric and a progress-dependent weight adjustment system.}
                                                                                                                                                                                                                                                 ^
SyntaxError: unmatched '}'
